# Generative-AI-Course

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Decoding/: Decoding_Strategies_in_Large_Language Models.ipynb
Deployment/: LLM_Inference_with_llama_cpp_python__Llama_2_13b_chat.ipynb  __init__.py  client.py  server.py
Docs/: skills.md
Docs/1-Introduction-GenAI/: README.md
Docs/2-Natural-Language-Processing/: README.md
Docs/3-Large-Language-Models/: README.md
Docs/4-Retrieval-Augmented-Generation/: README.md
Docs/5-Deployment-in-Production/: README.md
Docs/6-Difffusion-Models/: README.md
Docs/7-Multi-Modal-LLMs/Part-1-Multi-Modal-LLM/: README.md
Docs/7-Multi-Modal-LLMs/Part-2-Creation-Multi-Modal/: README.md
Finetuning/: Alpaca_+_Gemma_7b_unsloth.ipynb  Alpaca_+_Llama_3_8b_unsloth.ipynb  Alpaca_+_Mistral_7b_unsloth.ipynb  Alpaca_+_Phi_3_3_8b_unsloth.ipynb  Alpaca_+_TinyLlama_+_RoPE_Scaling_unsloth.ipynb  DPO_Zephyr_unsloth.ipynb  Fine_tune_LLMs_with_Axolotl.ipynb  Fine_tune_Llama_2_in_Google_Colab.ipynb  Fine_tune_Llama_3_with_ORPO.ipynb  Fine_tune_Mistral_7b_with_DPO.ipynb  Fine_tune_Mistral_7b_with_SFT.ipynb  Fine_tune_a_Mistral_7b_model_with_DPO.ipynb  ORPO_Unsloth.ipynb
Finetuning/notes/: FineTune-with-Trainer-Classifcation.py
LLMs/: __init__.py
Multimodal/: L1_Overview_of_Multimodality.ipynb  __init__.py  mnist_dataset.py  requirements.txt
Multimodal/.ipynb_checkpoints/: 0-setup-checkpoint.ipynb  0-setup-google-checkpoint.ipynb  1-multi-modal-search-checkpoint.ipynb  3-embedding_visualization-checkpoint.ipynb  Fireworks_API_Test-checkpoint.ipynb  L1_Overview_of_Multimodality-checkpoint.ipynb  L2_Final_D1-checkpoint.ipynb  L2_Final_Google-checkpoint.ipynb  L2_Multimodal_Search-checkpoint.ipynb  L2_Student-checkpoint.ipynb
Multimodal/backups/resources-img-and-vid/: backup_config.json  restore_config.json
Multimodal/backups/resources-img-and-vid/Embedded_at_8079/: backup.json
Multimodal/checkpoints/: model_epoch_99.pt
Other/: Decoding_Strategies_in_Large_Language Models.ipynb  Improve_ChatGPT_with_Knowledge_Graphs.ipynb
Quantization/: 4_bit_LLM_Quantization_with_GPTQ.ipynb  Introduction_to_Weight_Quantization.ipynb  Quantize_Llama_2_models_using_GGUF_and_llama_cpp.ipynb  Quantize_models_with_ExLlamaV2.ipynb
Tools/: AutoQuant.ipynb  LLM_AutoEval.ipynb  LazyAxolotl.ipynb  LazyMergekit.ipynb  Model_Family_Tree.ipynb  ZeroChat.ipynb
Transformers/: __init__.py
notebooks/.ipynb_checkpoints/: 01_how_to_train-checkpoint.ipynb
src/: __init__.py
tests/: __init__.py  test_imports.py
trainer/: __init__.py
utils/: Mergekit.ipynb
