[project]
name = "generative-ai-course"
version = "1.0.0"
description = "A comprehensive, production-ready educational platform for mastering Generative AI, Large Language Models, and Multimodal Systems"
authors = [
    { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]
maintainers = [
    { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<3.13"
keywords = [
    "generative-ai",
    "large-language-models",
    "llm",
    "transformers",
    "deep-learning",
    "machine-learning",
    "nlp",
    "computer-vision",
    "multimodal",
    "fine-tuning",
    "quantization",
    "deployment",
    "rag",
    "diffusion-models"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]

dependencies = [
    # Core Deep Learning Frameworks
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchaudio>=2.2.1",

    # Transformers and LLM Libraries
    "transformers>=4.38.2",
    "accelerate>=0.27.2",
    "peft>=0.9.0",
    "trl>=0.7.11",
    "bitsandbytes>=0.43.0",

    # Training and Optimization
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.6",
    "einops>=0.7.0",

    # Data Processing
    "datasets>=2.18.0",
    "pandas>=2.2.1",
    "numpy>=1.26.3,<2.0.0",
    "pyarrow>=15.0.1",
    "pyarrow-hotfix>=0.6",

    # ML Utilities
    "scikit-learn>=1.4.1",
    "scipy>=1.12.0",

    # NLP and Tokenization
    "sentencepiece>=0.2.0",
    "tokenizers>=0.15.2",
    "regex>=2023.12.25",

    # API and Web Frameworks
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",

    # Cloud and Storage
    "azure-core>=1.30.1",
    "azure-storage-blob>=12.19.1",
    "fsspec>=2024.2.0",

    # Monitoring and Logging
    "wandb>=0.16.4",
    "rich>=13.7.1",

    # Computer Vision (Multimodal)
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "scikit-image>=0.22.0",

    # Vector Databases and RAG
    "weaviate-client>=4.5.4",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "bokeh>=3.3.0",
    "holoviews>=1.18.0",
    "datashader>=0.16.0",
    "colorcet>=3.0.1",
    "umap-learn>=0.5.5",

    # AI APIs
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",

    # Configuration and Environment
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.3",
    "pydantic-core>=2.16.3",
    "tyro>=0.7.3",

    # Utilities
    "tqdm>=4.66.0",
    "click>=8.1.7",
    "filelock>=3.9.0",
    "huggingface-hub>=0.21.4",
    "safetensors>=0.4.2",
    "joblib>=1.3.2",
    "psutil>=5.9.8",
    "setproctitle>=1.3.3",

    # HTTP and Async
    "aiohttp>=3.9.3",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "ipykernel>=6.29.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

all = [
    "generative-ai-course[dev,jupyter,docs]",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://github.com/ruslanmv/Generative-AI-Course"
Repository = "https://github.com/ruslanmv/Generative-AI-Course"
Issues = "https://github.com/ruslanmv/Generative-AI-Course/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.uv.sources]
# Use PyTorch CUDA 12.1 index for GPU support
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | checkpoints
  | outputs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
